fix extra spacing for small screens Publish icon

--- a/src/apps/content-editor/src/app/views/ItemEdit/components/Header/ItemVersioning/ItemVersioning.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/components/Header/ItemVersioning/ItemVersioning.less
@@ -1,6 +1,9 @@
 @import "~@zesty-io/core/colors.less";
 
 .Actions {
+  .PublishText {
+    margin-left: 8px;
+  }
   .Hide {
     display: none;
 
